src/gtkscintilla.h

typedef struct _GtkScintilla			GtkScintilla;
struct _GtkScintilla
{
	ScintillaObject parent;
	GtkWidget *scintilla;
	GtkAccelGroup *accel_group;
    /*< private >*/
	GtkScintillaPrivate *priv;
};
GtkWidget*			gtk_scintilla_new						(void);
/* Scintilla Wrapper Function Prototypes */
/* These functions are defined in functions.c */
void 		gtk_scintilla_add_text (GtkScintilla *sci, guint length, const gchar *text);
void 		gtk_scintilla_add_styled_text (GtkScintilla *sci, guint length, const gchar *styled_text);
void 		gtk_scintilla_clear_all (GtkScintilla *sci);
void 		gtk_scintilla_clear_document_style (GtkScintilla *sci);
gboolean	gtk_scintilla_can_redo (GtkScintilla *sci);
void 		gtk_scintilla_convert_eols (GtkScintilla *sci, gint eolMode);
void 		gtk_scintilla_assign_cmd_key (GtkScintilla *sci, gulong km, gint msg);
void 		gtk_scintilla_clear_cmd_key (GtkScintilla *sci, gulong km);
void 		gtk_scintilla_clear_all_cmd_keys (GtkScintilla *sci);
void 		gtk_scintilla_begin_undo_action (GtkScintilla *sci);
void 		gtk_scintilla_end_undo_action (GtkScintilla *sci);
void 		gtk_scintilla_auto_completion_show (GtkScintilla *sci, gint lenEntered, const gchar *itemList);
void 		gtk_scintilla_auto_completion_cancel (GtkScintilla *sci);
gboolean 	gtk_scintilla_auto_completion_active (GtkScintilla *sci);
gint 		gtk_scintilla_auto_completion_pos_start (GtkScintilla *sci);
void 		gtk_scintilla_auto_completion_complete (GtkScintilla *sci);
void 		gtk_scintilla_auto_completion_stops (GtkScintilla *sci, const gchar *characterSet);
void 		gtk_scintilla_auto_completion_set_separator (GtkScintilla *sci, gint separatorCharacter);
gint 		gtk_scintilla_auto_completion_get_separator (GtkScintilla *sci);
void 		gtk_scintilla_auto_completion_select (GtkScintilla *sci, const gchar *text);
void 		gtk_scintilla_auto_completion_set_cancel_at_start (GtkScintilla *sci, gboolean cancel);
gboolean 	gtk_scintilla_auto_completion_get_cancel_at_start (GtkScintilla *sci);
void 		gtk_scintilla_auto_completion_set_fill_ups (GtkScintilla *sci, const gchar *characterSet);
void 		gtk_scintilla_auto_completion_set_choose_single (GtkScintilla *sci, gboolean chooseSingle);
gboolean 	gtk_scintilla_auto_completion_get_choose_single (GtkScintilla *sci);
void 		gtk_scintilla_auto_completion_set_ignore_case (GtkScintilla *sci, gboolean ignoreCase);
gboolean 	gtk_scintilla_auto_completion_get_ignore_case (GtkScintilla *sci);
void 		gtk_scintilla_auto_completion_set_auto_hide (GtkScintilla *sci, gboolean autoHide);
gboolean 	gtk_scintilla_auto_completion_get_auto_hide (GtkScintilla *sci);
void		gtk_scintilla_auto_completion_set_drop_rest_of_word (GtkScintilla *sci, gboolean dropRestOfWord);
gboolean 	gtk_scintilla_auto_completion_get_drop_rest_of_word (GtkScintilla *sci);
void		gtk_scintilla_clear_registered_images (GtkScintilla *sci);
gint 		gtk_scintilla_auto_completion_get_type_separator (GtkScintilla *sci);
void		gtk_scintilla_auto_completion_set_type_separator (GtkScintilla *sci, gint separatorCharacter);
void		gtk_scintilla_auto_completion_set_max_width (GtkScintilla *sci, gint characterCount);
gint 		gtk_scintilla_auto_completion_get_max_width (GtkScintilla *sci);
void		gtk_scintilla_auto_completion_set_max_height (GtkScintilla *sci, gint rowCount);
gint 		gtk_scintilla_auto_completion_get_max_height (GtkScintilla *sci);
gboolean 	gtk_scintilla_find_text (GtkScintilla *sci, const gchar *pattern, gint search_start_pos, gint search_end_pos, gint *found_start_pos, gint *found_end_pos, gint flags);
gint 		gtk_scintilla_format_range (GtkScintilla *sci, gboolean draw, struct Sci_RangeToFormat *fr);
gboolean	gtk_scintilla_can_paste (GtkScintilla *sci);
gboolean	gtk_scintilla_can_undo (GtkScintilla *sci);
void		gtk_scintilla_empty_undo_buffer (GtkScintilla *sci);
void		gtk_scintilla_cut (GtkScintilla *sci);
void		gtk_scintilla_copy (GtkScintilla *sci);
void		gtk_scintilla_clear (GtkScintilla *sci);
void		gtk_scintilla_call_tip_show (GtkScintilla *sci, gint pos, const gchar *definition);
void		gtk_scintilla_call_tip_cancel (GtkScintilla *sci);
gboolean	gtk_scintilla_call_tip_active (GtkScintilla *sci);
gint		gtk_scintilla_call_tip_pos_start (GtkScintilla *sci);
void		gtk_scintilla_call_tip_set_hlt (GtkScintilla *sci, gint start, gint end);
void		gtk_scintilla_call_tip_set_back (GtkScintilla *sci, gint back);
void		gtk_scintilla_call_tip_set_fore (GtkScintilla *sci, gint fore);
void		gtk_scintilla_call_tip_set_fore_hlt (GtkScintilla *sci, gint fore);
void		gtk_scintilla_call_tip_use_style (GtkScintilla *sci, gint tabSize);
gint		gtk_scintilla_doc_line_from_visible (GtkScintilla *sci, gint lineDisplay);
void		gtk_scintilla_ensure_visible (GtkScintilla *sci, gint line);
void		gtk_scintilla_ensure_visible_enforce_policy (GtkScintilla *sci, gint line);
void		gtk_scintilla_append_text (GtkScintilla *sci, guint length, const gchar *text);
void		gtk_scintilla_char_left (GtkScintilla *sci);
void		gtk_scintilla_char_left_extend (GtkScintilla *sci);
void		gtk_scintilla_char_right (GtkScintilla *sci);
void		gtk_scintilla_char_right_extend (GtkScintilla *sci);
void		gtk_scintilla_document_start (GtkScintilla *sci);
void		gtk_scintilla_document_start_extend (GtkScintilla *sci);
void		gtk_scintilla_document_end (GtkScintilla *sci);
void		gtk_scintilla_document_end_extend (GtkScintilla *sci);
void		gtk_scintilla_edit_toggle_overtype (GtkScintilla *sci);
void		gtk_scintilla_cancel (GtkScintilla *sci);
void		gtk_scintilla_delete_back (GtkScintilla *sci);
void		gtk_scintilla_back_tab (GtkScintilla *sci);
void		gtk_scintilla_form_feed (GtkScintilla *sci);
void		gtk_scintilla_del_word_left (GtkScintilla *sci);
void		gtk_scintilla_del_word_right (GtkScintilla *sci);
void		gtk_scintilla_del_word_right_end (GtkScintilla *sci);
void		gtk_scintilla_delete_back_not_line (GtkScintilla *sci);
void		gtk_scintilla_brace_highlight (GtkScintilla *sci, gint pos1, gint pos2);
void		gtk_scintilla_brace_bad_light (GtkScintilla *sci, gint pos);
gint		gtk_scintilla_brace_match (GtkScintilla *sci, gint pos);
gint		gtk_scintilla_create_document (GtkScintilla *sci);
void		gtk_scintilla_add_ref_document (GtkScintilla *sci, gint doc);
void		gtk_scintilla_del_line_left (GtkScintilla *sci);
void		gtk_scintilla_del_line_right (GtkScintilla *sci);
void		gtk_scintilla_choose_caret_x (GtkScintilla *sci);
void		gtk_scintilla_copy_range (GtkScintilla *sci, gint start, gint end);
void		gtk_scintilla_copy_text (GtkScintilla *sci, gint length, const gchar *text);
void		gtk_scintilla_char_left_rect_extend (GtkScintilla *sci);
void		gtk_scintilla_char_right_rect_extend (GtkScintilla *sci);
gint		gtk_scintilla_auto_completion_get_current (GtkScintilla *sci);
gint		gtk_scintilla_auto_completion_get_current_text (GtkScintilla *sci, gchar *s);
void		gtk_scintilla_allocate (GtkScintilla *sci, guint bytes);
/*void 		gtk_scintilla_set_length_for_encode (GtkScintilla *sci, gint bytes);*/
gchar*		gtk_scintilla_encoded_from_utf8 (GtkScintilla *sci, const gchar *utf8, gint bytes);
gint		gtk_scintilla_find_column (GtkScintilla *sci, gint line, gint column);
void		gtk_scintilla_copy_allow_line (GtkScintilla *sci);
void		gtk_scintilla_annotation_set_text (GtkScintilla *sci, gint line, const gchar *text);
gint		gtk_scintilla_annotation_get_text (GtkScintilla *sci, gint line, gchar *text);
void		gtk_scintilla_annotation_set_style (GtkScintilla *sci, gint line, gint style);
gint		gtk_scintilla_annotation_get_style (GtkScintilla *sci, gint line);
void		gtk_scintilla_annotation_set_styles (GtkScintilla *sci, gint line, const gchar *styles);
gint		gtk_scintilla_annotation_get_styles (GtkScintilla *sci, gint line, gchar *styles);
gint		gtk_scintilla_annotation_get_lines (GtkScintilla *sci, gint line);
void		gtk_scintilla_annotation_clear_all (GtkScintilla *sci);
void		gtk_scintilla_annotation_set_visible (GtkScintilla *sci, gint visible);
gint		gtk_scintilla_annotation_get_visible (GtkScintilla *sci);
void		gtk_scintilla_annotation_set_style_offset (GtkScintilla *sci, gint style);
gint		gtk_scintilla_annotation_get_style_offset (GtkScintilla *sci);
void		gtk_scintilla_add_undo_action (GtkScintilla *sci, gint token, gint flags);
gint		gtk_scintilla_char_position_from_point (GtkScintilla *sci, gint x, gint y);
gint		gtk_scintilla_char_position_from_point_close (GtkScintilla *sci, gint x, gint y);
gboolean 	gtk_scintilla_get_additional_carets_blink (GtkScintilla *sci);
void		gtk_scintilla_clear_selections (GtkScintilla *sci);
gint		gtk_scintilla_add_selection (GtkScintilla *sci, gint caret, gint anchor);
gint		gtk_scintilla_get_additional_caret_fore (GtkScintilla *sci);
void		gtk_scintilla_colourise (GtkScintilla *sci, gint start, gint end);