bindings/vala/gtkscintilla-1.0.vapi


[CCode (cprefix = "GtkScintilla", lower_case_cprefix = "gtk_scintilla_")]
namespace GtkScintilla {
	[Compact]
	[CCode (copy_function = "gtk_scintilla_copy", cheader_filename = "gtkscintilla-1.0.h")]
	public class  {
		public weak Gtk.Frame parent;
		public weak GtkScintilla.ScintillaObject scintilla;
		[CCode (cname = "gtk_scintilla_new", type = "GtkWidget*", has_construct_function = false)]
		public  ();
		[CCode (cname = "gtk_scintilla_add_ref_document")]
		public void add_ref_document (int doc);
		[CCode (cname = "gtk_scintilla_add_selection")]
		public int add_selection (int caret, int anchor);
		[CCode (cname = "gtk_scintilla_add_styled_text")]
		public void add_styled_text (int length, long c);
		[CCode (cname = "gtk_scintilla_add_text")]
		public void add_text (int length, string text);
		[CCode (cname = "gtk_scintilla_add_undo_action")]
		public void add_undo_action (int token, int flags);
		[CCode (cname = "gtk_scintilla_allocate")]
		public void allocate (int bytes);
		[CCode (cname = "gtk_scintilla_annotation_clear_all")]
		public void annotation_clear_all ();
		[CCode (cname = "gtk_scintilla_annotation_get_lines")]
		public int annotation_get_lines (int line);
		[CCode (cname = "gtk_scintilla_annotation_get_style")]
		public int annotation_get_style (int line);
		[CCode (cname = "gtk_scintilla_annotation_get_style_offset")]
		public int annotation_get_style_offset ();
		[CCode (cname = "gtk_scintilla_annotation_get_styles")]
		public int annotation_get_styles (int line, string styles);
		[CCode (cname = "gtk_scintilla_annotation_get_text")]
		public int annotation_get_text (int line, string text);
		[CCode (cname = "gtk_scintilla_annotation_get_visible")]
		public int annotation_get_visible ();
		[CCode (cname = "gtk_scintilla_annotation_set_style")]
		public void annotation_set_style (int line, int style);
		[CCode (cname = "gtk_scintilla_annotation_set_style_offset")]
		public void annotation_set_style_offset (int style);
		[CCode (cname = "gtk_scintilla_annotation_set_styles")]
		public void annotation_set_styles (int line, string styles);
		[CCode (cname = "gtk_scintilla_annotation_set_text")]
		public void annotation_set_text (int line, string text);
		[CCode (cname = "gtk_scintilla_annotation_set_visible")]
		public void annotation_set_visible (int visible);
		[CCode (cname = "gtk_scintilla_append_text")]
		public void append_text (int length, string text);
		[CCode (cname = "gtk_scintilla_assign_cmd_key")]
		public void assign_cmd_key (ulong km, int msg);
		[CCode (cname = "gtk_scintilla_auto_completion_active")]
		public bool auto_completion_active ();
		[CCode (cname = "gtk_scintilla_auto_completion_cancel")]
		public void auto_completion_cancel ();
		[CCode (cname = "gtk_scintilla_auto_completion_complete")]
		public void auto_completion_complete ();
		[CCode (cname = "gtk_scintilla_auto_completion_get_auto_hide")]
		public bool auto_completion_get_auto_hide ();
		[CCode (cname = "gtk_scintilla_auto_completion_get_cancel_at_start")]
		public bool auto_completion_get_cancel_at_start ();
		[CCode (cname = "gtk_scintilla_auto_completion_get_choose_single")]
		public bool auto_completion_get_choose_single ();
		[CCode (cname = "gtk_scintilla_auto_completion_get_current")]
		public int auto_completion_get_current ();
		[CCode (cname = "gtk_scintilla_auto_completion_get_current_text")]
		public int auto_completion_get_current_text (string s);
		[CCode (cname = "gtk_scintilla_auto_completion_get_drop_rest_of_word")]
		public bool auto_completion_get_drop_rest_of_word ();
		[CCode (cname = "gtk_scintilla_auto_completion_get_ignore_case")]
		public bool auto_completion_get_ignore_case ();
		[CCode (cname = "gtk_scintilla_auto_completion_get_max_height")]
		public int auto_completion_get_max_height ();
		[CCode (cname = "gtk_scintilla_auto_completion_get_max_width")]
		public int auto_completion_get_max_width ();
		[CCode (cname = "gtk_scintilla_auto_completion_get_separator")]
		public int auto_completion_get_separator ();
		[CCode (cname = "gtk_scintilla_auto_completion_get_type_separator")]
		public int auto_completion_get_type_separator ();
		[CCode (cname = "gtk_scintilla_auto_completion_pos_start")]
		public int auto_completion_pos_start ();
		[CCode (cname = "gtk_scintilla_auto_completion_select")]
		public void auto_completion_select (string text);
		[CCode (cname = "gtk_scintilla_auto_completion_set_auto_hide")]
		public void auto_completion_set_auto_hide (bool autoHide);
		[CCode (cname = "gtk_scintilla_auto_completion_set_cancel_at_start")]
		public void auto_completion_set_cancel_at_start (bool cancel);
		[CCode (cname = "gtk_scintilla_auto_completion_set_choose_single")]
		public void auto_completion_set_choose_single (bool chooseSingle);
		[CCode (cname = "gtk_scintilla_auto_completion_set_drop_rest_of_word")]
		public void auto_completion_set_drop_rest_of_word (bool dropRestOfWord);
		[CCode (cname = "gtk_scintilla_auto_completion_set_fill_ups")]
		public void auto_completion_set_fill_ups (string characterSet);
		[CCode (cname = "gtk_scintilla_auto_completion_set_ignore_case")]
		public void auto_completion_set_ignore_case (bool ignoreCase);
		[CCode (cname = "gtk_scintilla_auto_completion_set_max_height")]
		public void auto_completion_set_max_height (int rowCount);
		[CCode (cname = "gtk_scintilla_auto_completion_set_max_width")]
		public void auto_completion_set_max_width (int characterCount);
		[CCode (cname = "gtk_scintilla_auto_completion_set_separator")]
		public void auto_completion_set_separator (int separatorCharacter);
		[CCode (cname = "gtk_scintilla_auto_completion_set_type_separator")]
		public void auto_completion_set_type_separator (int separatorCharacter);
		[CCode (cname = "gtk_scintilla_auto_completion_show")]
		public void auto_completion_show (int lenEntered, string itemList);
		[CCode (cname = "gtk_scintilla_auto_completion_stops")]
		public void auto_completion_stops (string characterSet);
		[CCode (cname = "gtk_scintilla_back_tab")]
		public void back_tab ();
		[CCode (cname = "gtk_scintilla_begin_undo_action")]
		public void begin_undo_action ();
		[CCode (cname = "gtk_scintilla_brace_bad_light")]
		public void brace_bad_light (int pos);
		[CCode (cname = "gtk_scintilla_brace_highlight")]
		public void brace_highlight (int pos1, int pos2);
		[CCode (cname = "gtk_scintilla_brace_match")]
		public int brace_match (int pos);
		[CCode (cname = "gtk_scintilla_call_tip_active")]
		public bool call_tip_active ();
		[CCode (cname = "gtk_scintilla_call_tip_cancel")]
		public void call_tip_cancel ();
		[CCode (cname = "gtk_scintilla_call_tip_pos_start")]
		public int call_tip_pos_start ();
		[CCode (cname = "gtk_scintilla_call_tip_set_back")]
		public void call_tip_set_back (int back);
		[CCode (cname = "gtk_scintilla_call_tip_set_fore")]
		public void call_tip_set_fore (int fore);
		[CCode (cname = "gtk_scintilla_call_tip_set_fore_hlt")]
		public void call_tip_set_fore_hlt (int fore);
		[CCode (cname = "gtk_scintilla_call_tip_set_hlt")]
		public void call_tip_set_hlt (int start, int end);
		[CCode (cname = "gtk_scintilla_call_tip_show")]
		public void call_tip_show (int pos, string definition);
		[CCode (cname = "gtk_scintilla_call_tip_use_style")]
		public void call_tip_use_style (int tabSize);
		[CCode (cname = "gtk_scintilla_can_paste")]
		public bool can_paste ();
		[CCode (cname = "gtk_scintilla_can_redo")]
		public bool can_redo ();
		[CCode (cname = "gtk_scintilla_can_undo")]
		public bool can_undo ();
		[CCode (cname = "gtk_scintilla_cancel")]
		public void cancel ();
		[CCode (cname = "gtk_scintilla_char_left")]
		public void char_left ();
		[CCode (cname = "gtk_scintilla_char_left_extend")]
		public void char_left_extend ();
		[CCode (cname = "gtk_scintilla_char_left_rect_extend")]
		public void char_left_rect_extend ();
		[CCode (cname = "gtk_scintilla_char_position_from_point")]
		public int char_position_from_point (int x, int y);
		[CCode (cname = "gtk_scintilla_char_position_from_point_close")]
		public int char_position_from_point_close (int x, int y);
		[CCode (cname = "gtk_scintilla_char_right")]
		public void char_right ();
		[CCode (cname = "gtk_scintilla_char_right_extend")]
		public void char_right_extend ();
		[CCode (cname = "gtk_scintilla_char_right_rect_extend")]
		public void char_right_rect_extend ();
		[CCode (cname = "gtk_scintilla_choose_caret_x")]
		public void choose_caret_x ();
		[CCode (cname = "gtk_scintilla_clear")]
		public void clear ();
		[CCode (cname = "gtk_scintilla_clear_all")]
		public void clear_all ();
		[CCode (cname = "gtk_scintilla_clear_all_cmd_keys")]
		public void clear_all_cmd_keys ();
		[CCode (cname = "gtk_scintilla_clear_cmd_key")]
		public void clear_cmd_key (ulong km);
		[CCode (cname = "gtk_scintilla_clear_document_style")]
		public void clear_document_style ();
		[CCode (cname = "gtk_scintilla_clear_registered_images")]
		public void clear_registered_images ();
		[CCode (cname = "gtk_scintilla_clear_selections")]
		public void clear_selections ();
		[CCode (cname = "gtk_scintilla_colourise")]
		public void colourise (int start, int end);
		[CCode (cname = "gtk_scintilla_convert_eols")]
		public void convert_eols (int eolMode);
		[CCode (cname = "gtk_scintilla_copy")]
		public void copy ();
		[CCode (cname = "gtk_scintilla_copy_allow_line")]
		public void copy_allow_line ();
		[CCode (cname = "gtk_scintilla_copy_range")]
		public void copy_range (int start, int end);
		[CCode (cname = "gtk_scintilla_copy_text")]
		public void copy_text (int length, string text);
		[CCode (cname = "gtk_scintilla_create_document")]
		public int create_document ();
		[CCode (cname = "gtk_scintilla_cut")]
		public void cut ();
		[CCode (cname = "gtk_scintilla_del_line_left")]
		public void del_line_left ();
		[CCode (cname = "gtk_scintilla_del_line_right")]
		public void del_line_right ();
		[CCode (cname = "gtk_scintilla_del_word_left")]
		public void del_word_left ();
		[CCode (cname = "gtk_scintilla_del_word_right")]
		public void del_word_right ();
		[CCode (cname = "gtk_scintilla_del_word_right_end")]
		public void del_word_right_end ();
		[CCode (cname = "gtk_scintilla_delete_back")]
		public void delete_back ();
		[CCode (cname = "gtk_scintilla_delete_back_not_line")]
		public void delete_back_not_line ();
		[CCode (cname = "gtk_scintilla_doc_line_from_visible")]
		public int doc_line_from_visible (int lineDisplay);
		[CCode (cname = "gtk_scintilla_document_end")]
		public void document_end ();
		[CCode (cname = "gtk_scintilla_document_end_extend")]
		public void document_end_extend ();
		[CCode (cname = "gtk_scintilla_document_start")]
		public void document_start ();
		[CCode (cname = "gtk_scintilla_document_start_extend")]
		public void document_start_extend ();
		[CCode (cname = "gtk_scintilla_edit_toggle_overtype")]
		public void edit_toggle_overtype ();
		[CCode (cname = "gtk_scintilla_empty_undo_buffer")]
		public void empty_undo_buffer ();
		[CCode (cname = "gtk_scintilla_encoded_from_utf8")]
		public int encoded_from_utf8 (string utf8, string encoded);
		[CCode (cname = "gtk_scintilla_end_undo_action")]
		public void end_undo_action ();
		[CCode (cname = "gtk_scintilla_ensure_visible")]
		public void ensure_visible (int line);
		[CCode (cname = "gtk_scintilla_ensure_visible_enforce_policy")]
		public void ensure_visible_enforce_policy (int line);
		[CCode (cname = "gtk_scintilla_find_column")]
		public int find_column (int line, int column);
		[CCode (cname = "gtk_scintilla_find_text")]
		public int find_text (int flags, void* ft);
		[CCode (cname = "gtk_scintilla_form_feed")]
		public void form_feed ();
		[CCode (cname = "gtk_scintilla_format_range")]
		public int format_range (bool draw, void* fr);
		[CCode (cname = "gtk_scintilla_get_additional_caret_fore")]
		public int get_additional_caret_fore ();
		[CCode (cname = "gtk_scintilla_get_additional_carets_blink")]
		public bool get_additional_carets_blink ();
